Added Login func,Contact page, Profile page, changing the user data

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -67,9 +67,8 @@
             <p>Please select your login option or sign up to get started.</p>
         </div>
         <div class="buttons">
-            <a href="/student-login" class="button">Student Login</a>
-            <a href="/instructor-login" class="button">Instructor Login</a>
-            <a href="/signup" class="signup-link">Sign Up</a>
+            <a href="/login" class="button">Login</a>
+           <a href="/signup" class="signup-link">Sign Up</a>
         </div>
     </div>
 </body>
