--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -71,11 +71,11 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Instuctor Login</h2>
-        <form action="/instuctor-login" method="POST">
+        <h2>Login</h2>
+        <form action="/login" method="POST">
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" required>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
