--- a/public/createCourse.css
+++ b/public/createCourse.css
@@ -251,6 +251,29 @@ html, body {
       background-color: #ddd;
     }
   
+    .sidebar a img.icon {
+      margin-right: 10px;
+      width: 20px;
+      height: 20px; /* Adjust as needed */
+    }
+    
+    
+    /* Adjusting the content area to accommodate the sidebar */
+    .main-container {
+      margin-left: 250px;  /* Creates space for the sidebar */
+      padding-left: 20px;  /* Adjust for padding */
+    }
+  
+    .nav-links {
+      display: flex;
+      justify-content: flex-end;
+    }
+  
+    /* Styling for main content */
+    .content {
+      padding-left: 20px;
+    }
+  
     
     
     /* Adjusting the content area to accommodate the sidebar */
