--- a/views/partials/courseCard.hbs
+++ b/views/partials/courseCard.hbs
@@ -1,6 +1,6 @@
 <div class="course-card">
-  <a href="/course/{{id}}">
-    <img src="{{thumbnail}}" alt="{{title}}" class="thumbnail" />
+  <a href="/course/{{_id}}">
+    <img src="{{thumbnailUrl}}" alt="{{title}}" class="thumbnail" />
     <div class="course-info">
       <h3>{{title}}</h3>
       <p>{{description}}</p>
