--- a/public/createCourse.css
+++ b/public/createCourse.css
@@ -32,6 +32,7 @@ html, body {
     display: flex;
     margin: 0;
     padding: 0;
+    margin-right: 33px;
   }
   
   nav .nav-links li {
@@ -331,12 +332,7 @@ html, body {
         min-height: 100vh;
       }
       
-      .sidebar {
-        width: 200px;
-        background-color: #f4f4f4;
-        padding: 20px;
-        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-      }
+      
       
       .sidebar a {
         display: block;
